Fixed curtain not covering all content

--- a/styles/base.css
+++ b/styles/base.css
@@ -123,7 +123,7 @@ body > .drawer {
 	position: fixed;
 	top: 63px;
 	width: 248px;
-	z-index: 5;
+	z-index: 7;
 }
 
 	body > .drawer .section {
@@ -185,7 +185,7 @@ body > .drawer {
 		height: 100%;
 		position: fixed;
 		width: 100%;
-		z-index: 3;
+		z-index: 5;
 	}
 
 a {
